--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
       args:
         POSTGRES_ADMIN_USER: ${POSTGRES_ADMIN_USER:-postgres}
         POSTGRES_ADMIN_PASSWORD: ${POSTGRES_ADMIN_PASSWORD:-postgres123}
+        POSTGRES_DB: ${POSTGRES_DB:-app_db}
     container_name: postgres-for-rag
     environment:
       POSTGRES_ADMIN_USER: ${POSTGRES_ADMIN_USER:-postgres}
       POSTGRES_ADMIN_PASSWORD: ${POSTGRES_ADMIN_PASSWORD:-postgres123}
+      POSTGRES_DB: ${POSTGRES_DB:-app_db}
     ports:
       - "0.0.0.0:5432:5432"
     volumes:
