--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # PostgreSQL Admin Credentials
 POSTGRES_ADMIN_USER=postgres
 POSTGRES_ADMIN_PASSWORD=postgres123
+POSTGRES_DB=my-database-name
 
 # Add any other environment variables below
